[gd_scene load_steps=36 format=3 uid="uid://b6n5qd7skmkpc"]

[ext_resource type="Script" path="res://scenes/characters/character.gd" id="1_fbwr6"]
[ext_resource type="PackedScene" uid="uid://cxs88h1qteno5" path="res://scenes/components/character/attributes_component.tscn" id="2_e7yeo"]
[ext_resource type="PackedScene" uid="uid://wx7qik0tnnxf" path="res://scenes/components/character/health_component.tscn" id="3_ixrst"]
[ext_resource type="PackedScene" uid="uid://crlxihydew4my" path="res://scenes/components/character/attack_component.tscn" id="4_6vune"]
[ext_resource type="Texture2D" uid="uid://bq0l37v7wxe7s" path="res://assets/smoke-Sheet.png" id="5_ko2g2"]
[ext_resource type="Script" path="res://scripts/health_bar.gd" id="11_uessb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wsu32"]
atlas = ExtResource("5_ko2g2")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uxwg"]
atlas = ExtResource("5_ko2g2")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owvj6"]
atlas = ExtResource("5_ko2g2")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iueck"]
atlas = ExtResource("5_ko2g2")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij5we"]
atlas = ExtResource("5_ko2g2")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e040s"]
atlas = ExtResource("5_ko2g2")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ivk"]
atlas = ExtResource("5_ko2g2")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrt4n"]
atlas = ExtResource("5_ko2g2")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ps2"]
atlas = ExtResource("5_ko2g2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4r7h"]
atlas = ExtResource("5_ko2g2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gjwj"]
atlas = ExtResource("5_ko2g2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7tem"]
atlas = ExtResource("5_ko2g2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utudp"]
atlas = ExtResource("5_ko2g2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36m7"]
atlas = ExtResource("5_ko2g2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqkcw"]
atlas = ExtResource("5_ko2g2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwucc"]
atlas = ExtResource("5_ko2g2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3crc"]
atlas = ExtResource("5_ko2g2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ral"]
atlas = ExtResource("5_ko2g2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4jc43"]
load_path = "res://.godot/imported/monster-sprits-sheet.png-7af50097b7fb7c1ce571b2efe119aef2.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ly2"]
atlas = SubResource("CompressedTexture2D_4jc43")
region = Rect2(0, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju851"]
atlas = SubResource("CompressedTexture2D_4jc43")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sauld"]
atlas = SubResource("CompressedTexture2D_4jc43")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1huv8"]
atlas = SubResource("CompressedTexture2D_4jc43")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_beved"]
atlas = SubResource("CompressedTexture2D_4jc43")
region = Rect2(0, 384, 128, 128)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7anjp"]
load_path = "res://.godot/imported/monster_temp_sheet.png-369dc62cd84a366435efef510ee17d99.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_5h1se"]
atlas = SubResource("CompressedTexture2D_7anjp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4kkh"]
atlas = SubResource("CompressedTexture2D_7anjp")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tr127"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsu32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uxwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owvj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iueck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij5we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e040s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6ivk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrt4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ps2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4r7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gjwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7tem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utudp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqkcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwucc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3crc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ral")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ly2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju851")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sauld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1huv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beved")
}],
"loop": true,
"name": &"enemy",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h1se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4kkh")
}],
"loop": true,
"name": &"summon",
"speed": 0.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68lhu"]
bg_color = Color(0.333333, 0.694118, 0.313726, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Character" type="Node2D"]
script = ExtResource("1_fbwr6")

[node name="AttributesComponent" parent="." instance=ExtResource("2_e7yeo")]
luck = 10

[node name="HealthComponent" parent="." node_paths=PackedStringArray("attributes") instance=ExtResource("3_ixrst")]
attributes = NodePath("../AttributesComponent")
base_health = 1000.0
vitality_modifier = 30.0

[node name="AttackComponent" parent="." node_paths=PackedStringArray("attributes_component", "sprit") instance=ExtResource("4_6vune")]
attributes_component = NodePath("../AttributesComponent")
sprit = NodePath("../AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_tr127")
animation = &"death"

[node name="HealthBar" type="ProgressBar" parent="." node_paths=PackedStringArray("health_component")]
texture_filter = 1
offset_left = -32.0
offset_top = -74.0
offset_right = 32.0
offset_bottom = -64.0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_68lhu")
value = 50.0
show_percentage = false
script = ExtResource("11_uessb")
health_component = NodePath("../HealthComponent")

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
[connection signal="damaged" from="HealthComponent" to="HealthBar" method="_on_health_component_damaged"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="healed" from="HealthComponent" to="." method="_on_health_component_healed"]
[connection signal="healed" from="HealthComponent" to="HealthBar" method="_on_health_component_healed"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
